--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       <div class="container">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a href="/" class="navbar-brand">Trange</a>
+            <a href="/" class="navbar-brand">Home</a>
           </li>
           <li class="nav-item active">
             <a href="/search" class="nav-link">検索</a>
@@ -33,5 +33,10 @@
     </div>
     </nav>
     <div id="app"></div>
+    <div class="container-fluid bg-light text-center">
+      <p class="py-2 m-0">
+        <small>Copyright &copy;2021 Trange, All Rights Reserved.</small>
+      </p>
+    </div>
   </body>
 </html>
