--- a/public/index.html
+++ b/public/index.html
@@ -33,9 +33,9 @@
     </div>
     </nav>
     <div id="app"></div>
-    <div class="container-fluid bg-light text-center">
+    <div class="container-fluid text-center">
       <p class="py-2 m-0">
-        <small>Copyright &copy;2021 Trange, All Rights Reserved.</small>
+        <small>Copyright &copy;2021 Train×Range, All Rights Reserved.</small>
       </p>
     </div>
   </body>
