--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Train×Range</title>
   </head>
   <body>
     <noscript>
@@ -15,7 +15,7 @@
       <div class="container text-center">
         <h1>
           <a href="/">
-            <img alt="Trange logo" src="img/Trange.png">
+            <img alt="TrainｘRange logo" src="img/TR.png">
           </a>
         </h1>
       </div>
