--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
       <div class="container text-center">
         <h1>
           <a href="/">
-            <img alt="TrainｘRange logo" src="img/TR.png">
+            <img alt="logo" src="img/logo.png">
           </a>
         </h1>
       </div>
@@ -35,7 +35,7 @@
     <div id="app"></div>
     <div class="container-fluid text-center">
       <p class="py-2 m-0">
-        <small>Copyright &copy;2021 Train×Range, All Rights Reserved.</small>
+        <small>Copyright &copy;2021 えきまる, All Rights Reserved.</small>
       </p>
     </div>
   </body>
